# ANSI-ISO-CPlusPlus-Project

./: CMakeLists.txt  README.md  TrainingProject.cpp  TrainingProject.h  course.cpp  course.h  department.cpp  department.h  person.cpp  person.h  student.cpp  student.h  teach_assist.cpp  teach_assist.h  teacher.cpp  teacher.h  university.cpp  university.h
Enums/: enums.h
